app/styles.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,600;1,600&display=swap");
@import "tailwindcss";

@theme {
  --font-poppins: "Poppins", sans-serif;
  --font-lato: "Lato", sans-serif;
}

@theme static {
  --color-theme: var(--color-blue-700);
  --color-theme-hover: var(--color-blue-600);
  --color-theme-active: var(--color-blue-800);
  --color-muted: var(--color-blue-50);
  --color-light: var(--color-slate-50);
  --color-dark: var(--color-slate-950);
}

@utility container {
  margin: 0 auto;
  
  @variant sm {
    padding: 0 1rem;
  }

  @variant md {
    padding: 0 1.5rem;
  }
  
  @variant xl {
    padding: 0 2rem;
  }
  
  @variant 2xl {
    max-width: 1280px
  }
}

@layer components {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-bold font-poppins leading-tight;
  }

  h1 {
    @apply lg:text-6xl text-5xl mb-8;
  }

  h2 {
    @apply lg:text-5xl text-4xl mt-8 mb-6;
  }

  h3 {
    @apply lg:text-4xl text-3xl mt-6 mb-3;
  }

  h4 {
    @apply lg:text-3xl text-2xl mt-3 mb-2;
  }

  h5 {
    @apply lg:text-2xl text-xl mt-2 mb-1;
  }

  h6 {
    @apply lg:text-xl text-lg mt-1 mb-0.5;
  }

  p,
  a,
  label {
    @apply font-lato text-xl leading-normal;
  }

  .iconify {
    @apply inline-block size-6;
  }
}

/* -------------------- Text Colors -------------------- */

.bg-light,
.bg-muted,
.bg-transparent {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-slate-800;
  }

  p,
  label {
    @apply text-slate-600;
  }
}

.bg-dark,
.bg-theme {
    @apply *:text-slate-50;
}

